<resources>
    <string name="app_name">Planungskalender</string>
    <string name="username">Benutzername</string>
    <string name="btn_login">Login</string>
    <string name="password">Passwort</string>
    <string name="title_activity_events">Events</string>
    <string name="eventTitle">Musikprobe</string>
    <string name="dateday">12.</string>
    <string name="time">20:00</string>
    <string name="users">30</string>
    <string name="signedUp">Ja</string>
    <string name="eventName">Musikprobe</string>
    <string name="uhrConst">Uhr</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Output">Zeugs</string>
    <string name="Eventnum">9999</string>
    <string name="month">September</string>
    <string name="year">2018</string>
    <string name="cdesc">TODO</string>
    <string name="teilnehmer">Teilnehmer</string>
    <string name="abgesagt">Abgesagt</string>
    <string name="clock">clock</string>
    <string name="people">people</string>
    <string name="person">person</string>
    <string name="date">12.01.2000</string>
    <string name="tvcreator">TextView</string>
    <string name="tvsIn">TextView</string>
    <string name="tvSout">TextView</string>
    <string name="signedInOutName">Max Mustermann</string>
    <string name="idsIn">1</string>
    <string name="zur_ck">Zurück</string>
    <string name="name2"></string>
    <string name="info">Info:</string>
    <string name="infoInsert">Hier stehen informationen</string>
    <string name="infocd">Info:</string>
    <string name="offline">Offline</string>
    <string name="events">Events</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Planungskalender</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_new_event">Neues Event erstellen</string>
    <string name="anmelden">Anmelden</string>
    <string name="abmelden">Abmelden</string>
    <string name="StayLoIn">Eingeloggt bleiben</string>
    <string name="aktualisieren">Aktualisieren...</string>
    <string name="preference_file_key">"de.wm.planungskalender.shared_preferences"</string>
    <string name="title_activity_new_event">NewEvent</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="neue_musikproben">Neue Musikproben</string>
    <string name="neues_event">Neues Event</string>
</resources>
