<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expanded="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="40dp"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/zur_ck"
                    android:src="@drawable/ic_arrow_back_black_24dp" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    app:title="Events"

                    android:transitionName="EventName"
                    app:titleTextColor="@color/cardview_light_background"></android.support.v7.widget.Toolbar>
            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/signUp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/anmelden"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/signOut2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:text="@string/abmelden"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUp3" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:elevation="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/uhr"
                        android:contentDescription="@string/clock"
                        app:srcCompat="@drawable/ic_date_range_black_24dp" />

                    <android.support.v7.widget.AppCompatImageView

                        android:transitionName="ClockIcon"
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/clock"
                        app:srcCompat="@drawable/ic_schedule_black_24dp" />

                    <android.support.v7.widget.AppCompatImageView
                        android:transitionName="PeopleIcon"
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/imageView"
                        android:layout_below="@+id/time"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/people"
                        android:scaleType="center"
                        app:srcCompat="@drawable/ic_people_black_24dp" />

                    <android.support.v7.widget.AppCompatImageView
                        android:transitionName="PersonIcon"
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/users"
                        android:contentDescription="@string/person"
                        android:scaleType="center"
                        app:srcCompat="@drawable/ic_person_black_24dp" />

                    <TextView
                        android:id="@+id/date"
                        android:transitionName="datemonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/imageView2"
                        android:text="@string/date"
                        android:textColor="?attr/editTextColor" />

                    <TextView
                        android:transitionName="ClockUhr"
                        android:id="@+id/uhr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/time"
                        android:text="@string/uhrConst"
                        android:textColor="?attr/editTextColor" />

                    <TextView
                        android:transitionName="PeopleNum"
                        android:id="@+id/users"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time"
                        android:layout_marginBottom="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/imageView3"
                        android:text="@string/users"
                        android:textColor="?attr/editTextColor" />

                    <TextView
                        android:transitionName="PersonLoggedIn"
                        android:id="@+id/signedUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/imageView4"
                        android:text="@string/signedUp"
                        android:textColor="?attr/editTextColor" />

                    <TextView
                        android:transitionName="ClockTime"
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/imageView"
                        android:text="@string/time"
                        android:textColor="?attr/editTextColor" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="false"
                        android:layout_alignStart="@+id/imageView"
                        android:layout_below="@+id/imageView3"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/infocd"
                        android:src="@drawable/ic_insert_comment_black_24dp" />

                    <TextView
                        android:id="@+id/infoInsert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="false"
                        android:layout_alignParentEnd="false"
                        android:layout_below="@+id/imageView3"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/imageView6"
                        android:maxWidth="250dp"
                        android:text="@string/infoInsert"
                        android:textColor="?attr/editTextColor" />

                </RelativeLayout>
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:fillViewport="true"
            android:isScrollContainer="true"
            android:scrollbarStyle="insideOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteY="145dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:cardElevation="3dp"
                    app:layout_constraintBottom_toTopOf="@+id/cardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/teilnehmer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/teilnehmer"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvTeilnehmer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:contextClickable="false"
                            android:longClickable="false" />

                        <View
                            android:id="@+id/div"
                            style="@style/Divider"
                            android:layout_height="0dp"
                            android:layout_marginBottom="2dp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:cardElevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/abgesagt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/abgesagt"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvAbgesagt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:contextClickable="false"
                            android:longClickable="false" />

                        <View
                            android:id="@+id/div2"
                            style="@style/Divider"
                            android:layout_height="0dp"
                            android:layout_marginBottom="2dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>